- now 64-bit safe
- t, issym, tritosym method for complex now defaults to not conjugate
- various memory-management bugs fixed
- PDL::Complex::tricpy now alias to ctricpy

0.26 2021-11-14
- Reversible now called TwoWay

0.25 2021-10-02
- separate out {Real,Complex,Trans}/selectfunc.c
- opt in to upcoming PDL multi-C feature

0.24 2021-10-01
- change $PRIV() to $COMP()

0.23 2021-09-25
- fix mdet acting on complex matrices - thanks @wlmb

0.22 2021-09-15
- switch from $PRIV(__x_size) to $SIZE(x)

0.21 2021-08-12
- fix test bug under at least 5.14.1 that had test compare complex numbers

0.20 2021-05-30
- also export mpinv
- fix RedoDimsCode for native-complex
- fix matrix-multiplication overload to work with native-complex

0.19 2021-05-24
- change to PDL 2.047 with native complex i()

0.18 2021-05-03
- stop loading PDL::Complex and overriding PDL:: functions

0.17 2021-04-01
- handle native complex data

0.16 2021-03-23
- fix pp_setversion calls now that preserves string

0.15 2021-03-04
- add [c]gtsv functions

0.14 2019-12-09
- updated build-file perms - thanks @manwar
- support Lapack >= 3.7.0 - thanks Grégory Vanuxem

0.13 2019-11-10
- updated metadata to point to GitHub

0.12  Mon Jun  8 10:42:52 EDT 2015

  * Fix last 'package PDL::Complex'
  * Add 'clean' option to remove *~ files

0.11

  * Hide PDL and PDL::Complex package declarations from
    PAUSE/CPAN indexer

0.10

  * Add -lquadmath to compiler flags for gfortran

0.09

  * Use new GENERATE feature to make POD from PP files
  * Use correct meta-spec for META_MERGE
  * Require constant 1.03 - older version do not work with hashes.

0.08_03

  * Test of KMX patch to Makefile.PL for better docs on metacpan.org and search.cpan.org
  * Improved library detection for SPP PDL edition

0.08_02

  * Test of KMX patch to Makefile.PL

0.08_01

  * Add AUTHOR and ABSTRACT info to Makefile.PL
  * Apply patch from CPAN RT bug #38167
  * Fix encoding specs for POD

0.08  Tue Dec  3 06:07:55 EST 2013
